add file uploads init
